live label content alignment fix

--- a/site/styles/_availability-tags.scss
+++ b/site/styles/_availability-tags.scss
@@ -74,9 +74,11 @@ s72-plan-label {
 
 s72-live-label {
   .live-label {
+    align-items: center;
     backdrop-filter: blur(16px);
     border-radius: 100px;
     color: var(--body-color);
+    display: flex;
     font-size: 12px;
     line-height: 30px;
     padding: 0 12px;
@@ -92,7 +94,6 @@ s72-live-label {
       @extend .s72-icon;
 
       margin-right: 8px;
-      margin-top: -1.5px;
     }
   }
 }
